common-lisp-controller (3.52) unstable; urgency=low

  * debian/control: Added Depends: ${shlibs:Depends} since linked to libc
  * debian/rules: Uncommented dh_makeshlibs

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 14 Feb 2003 18:36:09 -0700

common-lisp-controller (3.51) unstable; urgency=low

  * Found the root cause of a bug that seems to undo the
    clc installation in cmucl. Now we warn for this. Closes: #174454
  * Added the debug-daemon-problems.sh script.. 

 -- Peter Van Eynde <pvaneynd@debian.org>  Sun,  9 Feb 2003 18:16:50 +0100

common-lisp-controller (3.50) unstable; urgency=low

  * Change package for REQUIRE with OpenMCL

 -- Kevin M. Rosenberg <kmr@debian.org>  Sun,  2 Feb 2003 22:36:00 -0700

common-lisp-controller (3.49) unstable; urgency=low

  * clc-build-daemon.c, clc-send-command.c: Change hard-coded constant in
    TCP protocol (6) to SOL_SOCKET in calls to setsockopt to be compatible
    with Linux kernel 2.2

 -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 23 Dec 2002 10:19:12 -0700

common-lisp-controller (3.48) unstable; urgency=low

  * Depend on newest version of cl-asdf

 -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  9 Dec 2002 10:28:25 -0700

common-lisp-controller (3.47) unstable; urgency=low

  * Updates for new ASDF system. Get rid of 'load-compiled-op

 -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  2 Dec 2002 09:27:11 -0700

common-lisp-controller (3.46) unstable; urgency=low

  * Export new function: source-root-path-to-fasl-path

 -- Kevin M. Rosenberg <kmr@debian.org>  Sun,  10 Nov 2002 23:43:00 -0700

common-lisp-controller (3.45) unstable; urgency=low

  * Fix typos (closes: 168326) (closes: 168328)
  Thanks Matthias Koppe!

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  8 Nov 2002 12:04:06 -0700

common-lisp-controller (3.44) unstable; urgency=low

  * Fix spelling error in clc-build-daemon.c
  * Add version to control file's adduser depends.
  * Add user package support for ASDF
